added the second and third blog

--- a/index.html
+++ b/index.html
@@ -12,5 +12,17 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, esse temporibus. Eos nobis excepturi eligendi voluptas odio ratione earum nostrum,
              iure culpa explicabo. Aliquam provident minus nobis! Consectetur, vel facere?</p>
     </div>
+
+    <div>
+        <h3>My Second Blog</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, esse temporibus. Eos nobis excepturi eligendi voluptas odio ratione earum nostrum,
+             iure culpa explicabo. Aliquam provident minus nobis! Consectetur, vel facere?</p>
+    </div>
+
+    <div>
+        <h3>My Third blog</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, esse temporibus. Eos nobis excepturi eligendi voluptas odio ratione earum nostrum,
+             iure culpa explicabo. Aliquam provident minus nobis! Consectetur, vel facere?</p>
+    </div>
 </body>
 </html>
