--- a/index.html
+++ b/index.html
@@ -24,5 +24,13 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, esse temporibus. Eos nobis excepturi eligendi voluptas odio ratione earum nostrum,
              iure culpa explicabo. Aliquam provident minus nobis! Consectetur, vel facere?</p>
     </div>
+    <div>
+        <h3>How to push incremental code</h3>
+        <u1>
+          <li>git add .</li> 
+          ]<li>git commit -m"add a meaningful commit message .</li> 
+          <li>git push .</li> 
+        </u1>
+    </div>
 </body>
 </html>
