added a gaming man picture

--- a/index.html
+++ b/index.html
@@ -32,5 +32,9 @@
           <li>git push .</li> 
         </u1>
     </div>
+    <div>
+        <h3> Hi! this is a gaming man</h3>
+        <img src="images/Gaming.JPG" alt="">
+    </div>
 </body>
 </html>
